# qv-rag

./: LICENSE  README.md  pyproject.toml
examples/: test_document.txt  test_document_example.py
src/qv_rag/: __init__.py  engine.py  storage.py  text_splitter.py
